supported_grammars/antlr3/ANTLRv3Parser.g4
parser grammar ANTLRv3Parser;

options
{
    tokenVocab = ANTLRv3Lexer;
    contextSuperClass=LanguageServer.AttributedParseTreeNode;
}

grammarDef
   : DOC_COMMENT? (LEXER | PARSER | TREE| ) GRAMMAR id SEMI optionsSpec? tokensSpec? attrScope* action* rules EOF
   ;

tokensSpec
   : TOKENS LBRACE tokenSpec+ RBRACE
   ;

tokenSpec
   : TOKEN_REF ( EQUAL (STRING_LITERAL | CHAR_LITERAL) | ) SEMI
   ;

attrScope
   : SCOPE id actionBlock
   ;

action
   : AT (actionScopeName COLONCOLON)? id actionBlock
   ;

actionScopeName
   : id
   | LEXER
   | PARSER
   ;

optionsSpec
   : OPTIONS LBRACE option* RBRACE
   ;

option
   : id EQUAL optionValue SEMI
   ;

optionValue
   : id
   | STRING_LITERAL
   | CHAR_LITERAL
   | INT
   | STAR
   ;

rules
   : rule_+
   ;

rule_
   : DOC_COMMENT? ((PROTECTED | PUBLIC | PRIVATE | FRAGMENT))? id BANG? argActionBlock? (RETURNS argActionBlock)? throwsSpec? optionsSpec? ruleScopeSpec? ruleAction* COLON altList SEMI exceptionGroup?
   ;
   
ruleAction
   : AT id actionBlock
   ;

throwsSpec
   : THROWS id (COMMA id)*
   ;

ruleScopeSpec
   : SCOPE actionBlock
   | SCOPE id (COMMA id)* SEMI
   | SCOPE actionBlock SCOPE id (COMMA id)* SEMI
   ;

block
   : LPAREN ((optionsSpec)? COLON)?
                alternative rewrite (OR alternative rewrite )*
        RPAREN
   ;

altList
   : alternative rewrite (OR alternative rewrite )*
   ;

alternative
   : element+
   |
   ;

exceptionGroup
   : (exceptionHandler)+ (finallyClause)?
   | finallyClause
   ;

exceptionHandler
   : CATCH argActionBlock actionBlock
   ;

finallyClause
   : FINALLY actionBlock
   ;

element
   : elementNoOptionSpec
   ;

elementNoOptionSpec
   : id (EQUAL | PEQ) atom (ebnfSuffix | )
   | id (EQUAL | PEQ) block (ebnfSuffix | )
   | atom (ebnfSuffix | )
   | ebnf
   | actionBlock
   | actionBlock QM ( SEMPREDOP | )
   | treeSpec (ebnfSuffix | )
   ;

actionBlock
   : BEGIN_ACTION ACTION_CONTENT* END_ACTION
   ;

argActionBlock
   : BEGIN_ARGUMENT ARGUMENT_CONTENT* END_ARGUMENT
   ;

atom
   : range ( ROOT | BANG | )
   | terminal_
   | notSet ( ROOT | BANG | )
   | RULE_REF argActionBlock? ( ROOT | BANG )?
   ;

notSet
   : NOT (notTerminal | block)
   ;

treeSpec
   : TREE_BEGIN element (element)+ RPAREN
   ;

ebnf
   : block (QM | STAR | PLUS | SEMPREDOP | )
   ;

range
   : CHAR_LITERAL RANGE CHAR_LITERAL
   ;

terminal_
   : (CHAR_LITERAL elementOptions?
        | TOKEN_REF elementOptions? (argActionBlock | )
        | STRING_LITERAL elementOptions?
        | DOT
     ) (ROOT | BANG)?
   ;

elementOptions
   : OPEN_ELEMENT_OPTION defaultNodeOption CLOSE_ELEMENT_OPTION
   | OPEN_ELEMENT_OPTION elementOption (SEMI elementOption)* CLOSE_ELEMENT_OPTION
   ;

defaultNodeOption
   : elementOptionId
   ;

elementOption
   : id EQUAL ( elementOptionId | STRING_LITERAL | DOUBLE_QUOTE_STRING_LITERAL | DOUBLE_ANGLE_STRING_LITERAL)
   ;

elementOptionId
   : id (DOT id )*
   ;

notTerminal
   : CHAR_LITERAL
   | TOKEN_REF
   | STRING_LITERAL
   ;

ebnfSuffix
   : QM
   | STAR
   | PLUS
   ;

rewrite
   : (REWRITE actionBlock QM rewrite_alternative)* REWRITE rewrite_alternative
   |
   ;

rewrite_alternative
   : rewrite_template
   | rewrite_tree_alternative
   |
   ;

rewrite_tree_block
   : LPAREN rewrite_tree_alternative RPAREN
   ;

rewrite_tree_alternative
   : rewrite_tree_element+
   ;

rewrite_tree_element
   : rewrite_tree_atom
   | rewrite_tree_atom ebnfSuffix
   | rewrite_tree (ebnfSuffix | )
   | rewrite_tree_ebnf
   ;

rewrite_tree_atom
   : CHAR_LITERAL elementOptions?
   | TOKEN_REF elementOptions? argActionBlock?
   | RULE_REF
   | STRING_LITERAL elementOptions?
   | DOLLAR id
   | actionBlock
   ;

rewrite_tree_ebnf
   : rewrite_tree_block ebnfSuffix
   ;

rewrite_tree
   : TREE_BEGIN rewrite_tree_atom rewrite_tree_element* RPAREN
   ;

rewrite_template
   : id LPAREN rewrite_template_args RPAREN
      ( DOUBLE_QUOTE_STRING_LITERAL | DOUBLE_ANGLE_STRING_LITERAL )
   | rewrite_template_ref
   | rewrite_indirect_template_head
   | actionBlock
   ;

rewrite_template_ref
   : id LPAREN rewrite_template_args RPAREN
   ;

rewrite_indirect_template_head
   : LPAREN actionBlock RPAREN LPAREN rewrite_template_args RPAREN
   ;

rewrite_template_args
   : rewrite_template_arg (COMMA rewrite_template_arg)*
   |
   ;

rewrite_template_arg
   : id EQUAL actionBlock
   ;

id
   : TOKEN_REF
   | RULE_REF
   ;
